--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'D501'
 - !lcsh 'World War, 1914-1918 -- Personal narratives'
+- GITenberg
 title: 'Kings, Queens and Pawns: An American Woman at the Front'
 url: http://www.gutenberg.org/ebooks/14457
